# inspection_route_generator

./: README.md
inspection_route/: CMakeLists.txt  package.xml
inspection_route/src/: guidance.cpp  inspection_route_node.cpp
inspection_stop/: CMakeLists.txt  package.xml
inspection_stop/include/inspection_route/: guidance.h
inspection_stop/src/: guidance.cpp  inspection_stop_node.cpp
marker_guidance/: CMakeLists.txt  package.xml
marker_guidance/src/: marker_guidance_node.cpp
sim_marker_guidance/include/aruco_msgs/: Marker.h  MarkerArray.h
sim_marker_guidance/include/inspection_route/: guidance.h
sim_marker_guidance/src/: #guidance.cpp#
